Finalize website creation

--- a/index.html
+++ b/index.html
@@ -5,192 +5,290 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>BeautyLine Studio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>BeautyLine Studio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.png" alt="" /></span>
-					</header>
+<body class="is-preload">
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="#services" class="active">Services</a></li>
-							<li><a href="#devices">Devices</a></li>
-							<li><a href="#team">Team</a></li>
-							<li><a href="#prices">Prices</a></li>
-                            <li><a href="#contact">Contact</a></li>
-						</ul>
-					</nav>
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-				<!-- Main -->
-					<div id="main">
+		<!-- Header -->
+		<header id="header" class="alt">
+			<span class="logo"><img src="images/logo.png" alt="" /></span>
+			<p>Sunnyvale, CA</p>
+		</header>
 
-						<!-- Introduction -->
-							<section id="services" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>Services</h2>
-                                            <h3>Endospheres Therapy</h3>
-										</header>
-										<p>Endospheres® represents a significant advancement in non-invasive body and facial treatments.
-                                            This technology utilizes patented Compressive Microvibration®, a method that distinguishes it
-                                            from traditional approaches. At its core, the device features a roller composed of 55 precisely
-                                            arranged silicone spheres. These spheres generate low-frequency mechanical vibrations, which
-                                            are then transmitted deep into the tissues. This action produces a multifaceted effect,
-                                            addressing several key aesthetic and wellness concerns.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
-									</div>
-									<span class="image"><img src="images/endospheres_machine.jpeg" alt="" /></span>
-								</div>
-								<div class="spotlight">
-									
-									<span class="image"><img src="images/treatment_example.jpg" alt="" /></span>
-									<div class="content">
-										<p>One of the key advantages of Endospheres® is its versatility. Treatments are suitable for
-											 all areas of the body, including those that are typically difficult to reach. Furthermore,
-											  it is considered a safe procedure with no known contraindications, making it accessible 
-											  to a wide range of individuals.</p>
-									</div>
-								</div>
-							</section>
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="#services" class="active">Services</a></li>
+				<li><a href="#equipment">Equipment</a></li>
+				<li><a href="#team">Team</a></li>
+				<li><a href="#prices">Prices</a></li>
+				<li><a href="#contact">Contact Us</a></li>
+			</ul>
+		</nav>
 
-						<!-- First Section -->
-							<section id="first" class="main special">
-								<header class="major">
-									<h2>Magna veroeros</h2>
-								</header>
-								<ul class="features">
-									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
+		<!-- Main -->
+		<div id="main">
 
-						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
-
-						<!-- Get Started -->
-							<section id="cta" class="main special">
-								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
-
+			<!-- Introduction -->
+			<section id="services" class="main">
+				<div class="spotlight">
+					<div class="content">
+						<header class="major">
+							<h2>Services</h2>
+							<h3>Endospheres Therapy</h3>
+						</header>
+						<p>Endospheres® represents a significant advancement in non-invasive body and facial treatments.
+							This technology utilizes patented Compressive Microvibration®, a method that distinguishes
+							it
+							from traditional approaches. At its core, the device features a roller composed of 55
+							precisely
+							arranged silicone spheres. These spheres generate low-frequency mechanical vibrations, which
+							are then transmitted deep into the tissues. This action produces a multifaceted effect,
+							addressing several key aesthetic and wellness concerns.</p>
 					</div>
+					<span class="image"><img src="images/endospheres_machine.jpeg" alt="" /></span>
+				</div>
+				<div class="spotlight">
+					<span class="image left"><img src="images/treatment_example.jpg" alt="" /></span>
+					<div class="content">
+						<p>One of the key advantages of Endospheres® is its versatility. Treatments are suitable for
+							all areas of the body, including those that are typically difficult to reach. Furthermore,
+							it is considered a safe procedure with no known contraindications, making it accessible
+							to a wide range of individuals.</p>
+					</div>
+				</div>
+				<div class="spotlight">
+					<div class="content">
+						<p>To ensure consistent and optimal results, the treatment is administered following a precise
+							protocol. This protocol has been meticulously developed and refined by a dedicated
+							Scientific
+							Committee, guaranteeing a comprehensive and standardized approach to full-body treatment.
+							This focus on scientific rigor underscores the commitment to delivering effective and
+							reliable outcomes.</p>
+						<ul class="actions">
+							<li><a target="_blank" href="https://www.endospheres.com/en/how-it-works-therapy/"
+									class="button">Learn More</a></li>
+						</ul>
+					</div>
+					<span class="image"><img src="images/treatment_face_example.jpg" alt="" /></span>
+				</div>
+			</section>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Etiam feugiat</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
-						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+			<!-- Benefits -->
+			<section class="main special">
+				<header class="major">
+					<h2>Benefits</h2>
+				</header>
+				<ul class="features spotlight">
+					<li>
+						<span class="image top"><img src="images/lymphatic.jpg" alt="" /></span>
+						<h3>Lymphatic stasis</h3>
+						<p>By stimulating lymphatic flow, it aids in the removal of toxins and excess fluids,
+							reducing swelling and promoting overall detoxification.</p>
+					</li>
+					<li>
+						<span class="image top"><img src="images/fluid.jpg" alt="" /></span>
+						<h3>Fluid accumulation</h3>
+						<p>The mechanical vibrations encourage the drainage of retained fluids, contributing
+							to a more contoured appearance.</p>
+					</li>
+					<li>
+						<span class="image top"><img src="images/fat_cells.jpg" alt="" /></span>
+						<h3>Fat cell aggregates (cellulite)</h3>
+						<p> Endospheres® works to break down these aggregates, smoothing the skin's texture
+							and diminishing the visible signs of cellulite.</p>
+					</li>
+					<li>
+						<span class="image top"><img src="images/skin.jpg" alt="" /></span>
+						<h3>Skin laxity</h3>
+						<p>The treatment stimulates collagen and elastin production, leading to firmer,
+							tighter skin.</p>
+					</li>
+				</ul>
+			</section>
 
-			</div>
+			<!-- Equipment -->
+			<section id="equipment" class="main">
+				<div class="spotlight">
+					<div class="content">
+						<header class="major">
+							<h2>Equipment</h2>
+						</header>
+						<p>We prioritize your safety and the achievement of your desired results by exclusively
+							utilizing authentic, licensed Endospheres® equipment. This commitment to authenticity
+							ensures that every treatment is delivered with devices that meet the manufacturer's
+							stringent specifications and quality control standards. Furthermore, Endospheres® devices
+							are manufactured by a company that has obtained the required FDA clearances, demonstrating
+							adherence to established regulatory
+							guidelines. This comprehensive approach, combining authenticity, thorough testing, and
+							regulatory compliance, provides you with the assurance that you are receiving a safe,
+							effective, and genuine Endospheres® treatment.</p>
+						<ul class="actions">
+							<li><a target="_blank"
+									href="https://www.endospheres.com/en/professional-aesthetic-cellulite-treatment-machines/professional-aesthetic-cellulite-treatment-machines-ak-sensor-all/"
+									class="button">Learn More</a></li>
+						</ul>
+					</div>
+					<span class="image"><img src="images/endospheres_machine_2.jpeg" alt="" /></span>
+				</div>
+			</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<!-- Team -->
+			<section id="team" class="main">
+				<div class="spotlight">
+					<div class="content">
+						<header class="major">
+							<h2>Team</h2>
+							<h3>Ekaterina (Kate)</h3>
+						</header>
+						<p>Kate, a certified esthetician and Endospheres® specialist, demonstrates a high level of
+							professionalism and dedication to her clients, shown through her detailed approach to
+							personalized care. With a comprehensive understanding of skin health and Endospheres®
+							technology, she conducts thorough consultations to assess individual needs and develop
+							customized treatment plans. Her expertise extends beyond technical proficiency; she
+							fosters a comfortable and supportive environment, ensuring clients feel informed and
+							empowered throughout their journey.</p>
+					</div>
+					<span class="image"><img src="images/kate.jpg" alt="" /></span>
+				</div>
+			</section>
 
-	</body>
+			<!-- Prices -->
+			<section id="prices" class="main">
+				<div class="spotlight">
+					<div class="content">
+						<header class="major">
+							<h2>Prices</h2>
+						</header>
+						<ul class="features spotlight">
+							<li>
+								<h3>Body (60-70 min)</h3>
+								<p>$ 180</p>
+							</li>
+							<li>
+								<h3>Body Package (10 sessions)</h3>
+								<p>$ 1,500</p>
+							</li>
+							<li>
+								<h3>Face (30 min)</h3>
+								<p>$ 120</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+
+			<!-- Contact -->
+			<section id="contact" class="main special">
+				<header class="major">
+					<h2>Contact Us</h2>
+					<p>Reach us by any means you seem suitable.</p>
+					<ul class="contacts">
+						<li>
+							<p style="display:inline-block;">
+								<img src="images/chat.png" alt="" />
+								+1 (408) 667-8734
+							</p>
+						</li>
+						<li>
+							<p style="display:inline-block;">
+								<img src="images/instagram.png" alt="" />
+								<a href="https://www.instagram.com/beauty_line_studio_/" target="_blank"
+									style="text-decoration:underline; border-bottom: 0">@beauty_line_studio_</a>
+							</p>
+						</li>
+						<li>
+							<p style="display:inline-block;">
+								<img src="images/email.png" alt="" />
+								beautyline.st@gmail.com
+							</p>
+						</li>
+					</ul>
+					<section class="contact-section">
+						<div class="contact-intro">
+							<h2 class="contact-title">Get in Touch</h2>
+							<p class="contact-description">
+								Fill out the form below and we'll get back to you as soon as possible.
+							</p>
+						</div>
+
+						<form class="contact-form" action="https://api.web3forms.com/submit" method="POST">
+							<input type="hidden" name="access_key" value="0f3c5ff9-fb00-490e-a983-0b8b049282f8" />
+							<input type="hidden" name="subject" value="New Contact Form Submission" />
+							<input type="hidden" name="from_name" value="beautyline.studio" />
+							<!-- More custom ization options available in the docs: https://docs.web3forms.com -->
+
+							<div class="form-group-container">
+								<div class="form-group">
+									<label for="name" class="form-label">Name</label>
+									<input id="name" name="name" class="form-input" placeholder="Your name"
+										type="text" />
+								</div>
+								<div class="form-group">
+									<label for="email" class="form-label">Email</label>
+									<input id="email" name="email" class="form-input" placeholder="Your email"
+										type="email" />
+								</div>
+								<div class="form-group">
+									<label for="phone" class="form-label">Phone</label>
+									<input id="phone" name="phone" class="form-input" placeholder="+1 (234) 56789"
+										type="text" />
+								</div>
+								<div class="form-group">
+									<label for="message" class="form-label">Message</label>
+									<textarea class="form-textarea" id="message" name="message"
+										placeholder="Your message"></textarea>
+								</div>
+							</div>
+							<button class="button primary form-submit" type="submit">Send Message</button>
+						</form>
+					</section>
+				</header>
+			</section>
+		</div>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<section>
+			</section>
+			<section>
+				<h2>Information</h2>
+				<dl class="alt">
+					<dt>Address</dt>
+					<dd><a href="https://maps.app.goo.gl/uAvDmuPf9YiSTZcZ9" target="_blank">200 W McKinley Ave Ste 110
+							&bull; Sunnyvale, CA 94086 &bull; USA</a></dd>
+					<dt>Phone</dt>
+					<dd>+1 (408) 667-8734</dd>
+					<dt>Email</dt>
+					<dd><a href="#">beautyline.st@gmail.com</a></dd>
+				</dl>
+			</section>
+			<p class="copyright">Beauty Line 2025</p>
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
