--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
 						</header>
 						<ul class="features spotlight">
 							<li>
-								<h3>Body (60-70 min)</h3>
-								<p>$ 180</p>
+								<h3>Full-body 1 session (75 min)</h3>
+								<p>$ 200</p>
 							</li>
 							<li>
-								<h3>Body Package (10 sessions)</h3>
-								<p>$ 1,500</p>
+								<h3>Full-body Package (12 sessions)</h3>
+								<p>$ 2,160</p>
 							</li>
 							<li>
 								<h3>Face (30 min)</h3>
